--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,30 +26,19 @@ services:
       resources:
         limits:
           # CPU limits (em número de cores)
-          cpus: '${DOCKER_CPU_LIMIT:-2.0}'
+          cpus: 1
           # Memória limits (formato: 512m, 1g, 2g, etc.)
-          memory: '${DOCKER_MEMORY_LIMIT:-2048}M'
+          memory: 1g
         reservations:
           # Recursos reservados (garantidos)
-          cpus: '${DOCKER_CPU_RESERVATION:-1.0}'
-          memory: '${DOCKER_MEMORY_RESERVATION:-1024}M'
-    
+          cpus: 0.1
+          memory: 128M
+
     # Volumes para persistência de dados
     volumes:
       - ./Entrada:/app/Entrada
       - ./Saida:/app/Saida
       - ./logs:/app/logs
-    
-    # Configurações de saúde
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:7000/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    
-    # Configurações de segurança
-    user: "1000:1000"  # Execute com usuário não-root
     
     # Configurações de rede interna (opcional)
     networks:
